Fixed the testcases for core added  the alias for bulk delete update operations in order to be compliant with hibernate 6